Test/typing/should_fail/duplicate_classes_enclosed.java
package tutu.titi.toto;

class A {

    class B {}

    class B {}
}
